--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio",
+  "name": "simples_crud_nodejs_express",
   "version": "1.0.0",
   "main": "src/server.js",
   "license": "MIT",
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "git-commit-msg-linter": "^4.1.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
